--- a/project-base/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/listByBrand.html.twig
+++ b/project-base/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/listByBrand.html.twig
@@ -2,31 +2,27 @@
 {% import '@ShopsysShop/Front/Inline/Paginator/paginator.html.twig' as paginator %}
 {% import '@ShopsysShop/Front/Content/Product/productListMacro.html.twig' as productList %}
 
-{% set domain = getDomain() %}
-{% set brand = brandDetail.brand %}
-{% set brandDomain = brandDetail.brandDomainsIndexedByDomainId[domain.id] %}
-
 {% block meta_robots %}
     {{ paginator.metaRobots(paginationResult) }}
 {% endblock %}
 
 {% block title %}
-    {% if brandDomain.seoTitle is not null %}
-        {{ brandDomain.seoTitle }}
+    {% if brand.seoTitle is not null %}
+        {{ brand.seoTitle }}
     {% else %}
         {{ brand.name }}
     {% endif %}
 {% endblock %}
 
 {% block meta_description %}
-    {{ brandDomain.seoMetaDescription|default(getSeoMetaDescription()) }}
+    {{ brand.seoMetaDescription|default(getSeoMetaDescription()) }}
 {% endblock %}
 
 {% block main_content %}
     <div class="box-list">
         <h1>
-            {% if brandDomain.seoH1 is not null %}
-                {{ brandDomain.seoH1 }}
+            {% if brand.seoH1 is not null %}
+                {{ brand.seoH1 }}
             {% else %}
                 {{ brand.name }}
             {% endif %}
